<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Property Animations Examples</string>
    <string name="action_settings">Settings</string>
    <string name="example1">Example 1</string>
    <string name="example2">Example 2</string>
    <string name="example3">Example 3</string>
    <string name="example4">Example 4</string>
    <string name="example5">Example 5</string>
    <string name="example6">Example 6</string>
    <string name="example7">Example 7</string>
    <string name="example8">Example 8</string>
    <string name="example9">Example 9</string>
    <string name="example10">Example 10</string>

</resources>
