<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/example1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/example1"
        android:onClick="goExample1" />
    <Button
        android:id="@+id/example2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example1_button"
        android:text="@string/example2"
        android:onClick="goExample2" />
    <Button
        android:id="@+id/example3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example2_button"
        android:text="@string/example3"
        android:onClick="goExample3" />
    <Button
        android:id="@+id/example4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example3_button"
        android:text="@string/example4"
        android:onClick="goExample4" />
    <Button
        android:id="@+id/example5_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example4_button"
        android:text="@string/example5"
        android:onClick="goExample5" />
    <Button
        android:id="@+id/example6_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example5_button"
        android:text="@string/example6"
        android:onClick="goExample6" />
    <Button
        android:id="@+id/example7_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example6_button"
        android:text="@string/example7"
        android:onClick="goExample7" />
    <Button
        android:id="@+id/example8_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example7_button"
        android:text="@string/example8"
        android:onClick="goExample8" />
    <Button
        android:id="@+id/example9_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/example8_button"
        android:text="@string/example9"
        android:onClick="goExample9" />

</RelativeLayout>
